# orocksdb

./: .bazelignore  .gitignore  BUILD.bazel  BUILD.bzl  WORKSPACE.bazel  WORKSPACE.bzl
bzl/: obazl.edn  opam.bzl
bzl/tools/: user.bazelrc
